--- a/package.json
+++ b/package.json
@@ -6,12 +6,23 @@
         "start": "node ./bin/www"
     },
     "dependencies": {
-        "express": "~4.9.0",
         "body-parser": "~1.8.1",
+        "bower": "~1.3.12",
         "cookie-parser": "~1.3.3",
-        "morgan": "~1.3.0",
-        "serve-favicon": "~2.1.3",
         "debug": "~2.0.0",
-        "jade": "~1.6.0"
+        "express": "~4.9.0",
+        "grunt": "^0.4.5",
+        "grunt-cli": "~0.1.13",
+        "grunt-contrib-concat": "~0.5.0",
+        "grunt-contrib-cssmin": "~0.10.0",
+        "grunt-contrib-jshint": "~0.10.0",
+        "grunt-contrib-less": "~0.11.4",
+        "grunt-contrib-nodeunit": "~0.4.1",
+        "grunt-contrib-uglify": "~0.5.0",
+        "grunt-contrib-watch": "0.6.1",
+        "grunt-sass": "~0.14.1",
+        "jade": "~1.6.0",
+        "morgan": "~1.3.0",
+        "serve-favicon": "~2.1.3"
     }
 }
