--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "grunt-contrib-watch": "0.6.1",
         "grunt-sass": "~0.14.1",
         "jade": "~1.6.0",
+        "mongoose": "~3.8.18",
         "morgan": "~1.3.0",
         "serve-favicon": "~2.1.3"
     }
