--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "GearWorks",
-    "version": "0.0.0",
+    "version": "0.0.1",
     "private": true,
     "scripts": {
-        "start": "node ./bin/www"
+        "start": "node app.js",
+        "postinstall": "bower install"
     },
     "dependencies": {
         "body-parser": "~1.8.1",
