put flipt.core.Flag/default/test

--- a/features/default/features.yaml
+++ b/features/default/features.yaml
@@ -8,3 +8,6 @@ flags:
       type: VARIANT_FLAG_TYPE
       description: test
       enabled: false
+      variants:
+        - key: foo
+          attachment: {}
