--- a/features/default/features.yaml
+++ b/features/default/features.yaml
@@ -14,4 +14,9 @@ flags:
 segments:
     - key: team_id
       name: team_id
+      constraints:
+        - type: STRING_COMPARISON_TYPE
+          property: team_id
+          operator: eq
+          value: "5"
       match_type: ALL_MATCH_TYPE
