--- a/features/default/features.yaml
+++ b/features/default/features.yaml
@@ -7,7 +7,7 @@ flags:
       name: test
       type: VARIANT_FLAG_TYPE
       description: test
-      enabled: false
+      enabled: true
       variants:
         - key: foo
           attachment: {}
